--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "css-loader": "^6.8.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^2.7.6",
     "sass": "^1.63.3",
     "sass-loader": "^13.3.2",
