--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "mini-css-extract-plugin": "^2.7.6",
     "sass": "^1.63.3",
     "sass-loader": "^13.3.2",
+    "ts-loader": "^9.4.3",
+    "typescript": "^5.1.3",
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4",
     "workbox-webpack-plugin": "^7.0.0"
@@ -28,6 +30,8 @@
     "@ffmpeg/ffmpeg": "^0.11.6",
     "crypto-js": "^4.1.1",
     "microsoft-cognitiveservices-speech-sdk": "^1.29.0",
+    "openai": "^3.3.0",
+    "tiktoken": "^1.0.8",
     "webm-to-wav-converter": "^1.1.0"
   }
 }
